[gd_scene load_steps=2 format=2]

[ext_resource path="res://test/TestScene.gd" type="Script" id=1]

[node name="Test" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelSplitContainer" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UserPanelContainer" type="PanelContainer" parent="PanelSplitContainer"]
margin_right = 508.0
margin_bottom = 612.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelSplitContainer/UserPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 501.0
margin_bottom = 605.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="UserContainer" type="VBoxContainer" parent="PanelSplitContainer/UserPanelContainer/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 469.0
margin_bottom = 573.0

[node name="InstalledCheckBox" type="CheckBox" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_right = 444.0
margin_bottom = 24.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "User has Metamask installed?"
align = 2

[node name="ConnectedCheckBox" type="CheckBox" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 28.0
margin_right = 444.0
margin_bottom = 52.0
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
disabled = true
text = "Metamask is connected to chain"
align = 2

[node name="ConnectButton" type="Button" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 56.0
margin_right = 444.0
margin_bottom = 76.0
text = "Connect to MetaMask"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 80.0
margin_right = 444.0
margin_bottom = 84.0

[node name="ChainIdLineEdit" type="LineEdit" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 88.0
margin_right = 444.0
margin_bottom = 112.0
size_flags_horizontal = 3
placeholder_text = "New Chain ID"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwitchChainButton" type="Button" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 116.0
margin_right = 444.0
margin_bottom = 136.0
text = "Switch Chain"

[node name="HSeparator2" type="HSeparator" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 140.0
margin_right = 444.0
margin_bottom = 144.0

[node name="BalanceLineEdit" type="LineEdit" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 148.0
margin_right = 444.0
margin_bottom = 172.0
size_flags_horizontal = 3
placeholder_text = "Wallet Address"

[node name="BalanceButton" type="Button" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 176.0
margin_right = 444.0
margin_bottom = 196.0
text = "Get Wallet Balance"

[node name="HSeparator3" type="HSeparator" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 200.0
margin_right = 444.0
margin_bottom = 204.0

[node name="TokenBalanceAddressLineEdit" type="LineEdit" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 208.0
margin_right = 444.0
margin_bottom = 232.0
placeholder_text = "Token Address"

[node name="WalletTokenBalanceLineEdit" type="LineEdit" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 236.0
margin_right = 444.0
margin_bottom = 260.0
placeholder_text = "Wallet Address"

[node name="TokenBalanceButton" type="Button" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 264.0
margin_right = 444.0
margin_bottom = 284.0
text = "Get Token Balance"

[node name="HSeparator4" type="HSeparator" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 288.0
margin_right = 444.0
margin_bottom = 292.0

[node name="AddBinanceButton" type="Button" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 296.0
margin_right = 444.0
margin_bottom = 316.0
text = "Add Binance Chain"

[node name="AddMaticButton" type="Button" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 320.0
margin_right = 444.0
margin_bottom = 340.0
text = "Add Matic Chain"

[node name="HSeparator5" type="HSeparator" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 344.0
margin_right = 444.0
margin_bottom = 348.0

[node name="AddEnjinTokenButton" type="Button" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 352.0
margin_right = 444.0
margin_bottom = 372.0
text = "Add Enjin Token"

[node name="HSeparator6" type="HSeparator" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 376.0
margin_right = 444.0
margin_bottom = 380.0

[node name="GetGasButton" type="Button" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 384.0
margin_right = 444.0
margin_bottom = 404.0
text = "Get Current Gas Price"

[node name="HSeparator7" type="HSeparator" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 408.0
margin_right = 444.0
margin_bottom = 412.0

[node name="TransferFromLineEdit" type="LineEdit" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 416.0
margin_right = 444.0
margin_bottom = 440.0
placeholder_text = "Transfer Source Address"

[node name="TransferTokenLineEdit" type="LineEdit" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 444.0
margin_right = 444.0
margin_bottom = 468.0
placeholder_text = "Address of Token to Transfer"

[node name="TransferToLineEdit" type="LineEdit" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 472.0
margin_right = 444.0
margin_bottom = 496.0
placeholder_text = "Transfer Recipient"

[node name="TransferAmountLineEdit" type="LineEdit" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 500.0
margin_right = 444.0
margin_bottom = 524.0
placeholder_text = "Transfer Amount"

[node name="TransferButton" type="Button" parent="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer"]
margin_top = 528.0
margin_right = 444.0
margin_bottom = 548.0
text = "Transfer"

[node name="OutputPanelContainer" type="PanelContainer" parent="PanelSplitContainer"]
margin_left = 516.0
margin_right = 1024.0
margin_bottom = 612.0
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelSplitContainer/OutputPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 501.0
margin_bottom = 605.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelSplitContainer/OutputPanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 484.0
margin_bottom = 588.0

[node name="OutputLabel" type="Label" parent="PanelSplitContainer/OutputPanelContainer/MarginContainer/VBoxContainer"]
margin_right = 474.0
margin_bottom = 14.0
text = "Output Log"

[node name="OutputTextEdit" type="TextEdit" parent="PanelSplitContainer/OutputPanelContainer/MarginContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 474.0
margin_bottom = 578.0
size_flags_vertical = 3
readonly = true

[connection signal="pressed" from="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer/SwitchChainButton" to="." method="_on_SwitchChainButton_pressed"]
[connection signal="pressed" from="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer/BalanceButton" to="." method="_on_BalanceButton_pressed"]
[connection signal="pressed" from="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer/TokenBalanceButton" to="." method="_on_TokenBalanceButton_pressed"]
[connection signal="pressed" from="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer/AddBinanceButton" to="." method="_on_AddBinanceButton_pressed"]
[connection signal="pressed" from="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer/AddMaticButton" to="." method="_on_AddMaticButton_pressed"]
[connection signal="pressed" from="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer/AddEnjinTokenButton" to="." method="_on_AddEnjinTokenButton_pressed"]
[connection signal="pressed" from="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer/GetGasButton" to="." method="_on_GetGasButton_pressed"]
[connection signal="pressed" from="PanelSplitContainer/UserPanelContainer/MarginContainer/UserContainer/TransferButton" to="." method="_on_TransferButton_pressed"]
